Fix SonarQube warnings